# aether-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
models/: README.md
skills/: dispatch_twitter_awesome_agents.py  promote_aetheros_v2.py
src/: agent.rs  atd.rs  autocoder.rs  cache.rs  clt.rs  compress.rs  dashboard.rs  decompose.rs  desktop.rs  duet.rs  genesis.rs  gguf_loader.rs  graph.rs  handlers.rs  hcm.rs  hypnos.rs  main.rs  mcts.rs  siren.rs  tfidf.rs  tools.rs
