[package]
name = "aether-engine"
version = "1.0.0"
edition = "2021"
authors = ["AFKmoney"]
license = "MIT"
description = "Aether Engine v3.0 — a Rust inference middleware that multiplies small GGUF model capacity 10x via ten interconnected innovations (HCM, CLT, ATD, cognitive decomposition, knowledge distillation, and more)."
repository = "https://github.com/AFKmoney/aether-engine"
homepage = "https://github.com/AFKmoney/aether-engine"
keywords = ["llm", "inference", "gguf", "rag", "reasoning"]
categories = ["science", "text-processing"]
readme = "README.md"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "thin"
